--- a/templates/tinla/question/add_question.html
+++ b/templates/tinla/question/add_question.html
@@ -1,4 +1,5 @@
 {% extends 'web/base.html' %}
+{% load question_tags %}
 {%block content%}
 <style>
     .question_details_container {
@@ -79,70 +80,101 @@
 	<div class="inner-content">
 		<form action="" id="add_form" name="add_form" method="POST" enctype="multipart/form-data">
 			<div class="question_details_container"><!-- div web module details container -->
+				<div style="background-color:#f9f9f9"><!-- div gray background -->
 					<div class="question_details"> <!-- div web_module_details -->
 						<div class="separator-bottom f18 fb fdgray">Question Details</div>
-                        {{question_formset.management_form}}
-                        {% for q in question_formset.forms %}
-                        <div>
 						<div class="divider-top"><!-- div divider top -->
 							<div class="mart20"> <!-- div main -->
 								<div class="details left"><!-- div left part -->
-									<div class="left f11 w110 marb5">{{ q.question.label }}<span class="red">*</span></div>
-									<div class="left w350 marb5">{{ q.question }}</div>									
+									<div class="left f11 w110 marb5">{{ form.question.label }}<span class="red">*</span></div>
+									<div class="left w350 marb5">{{ form.question }}</div>									
 								</div><!-- /div left part -->
 								<div class="details left"><!-- div right part -->
-									<div class="marl100 left f11 w110 marb5">{{ q.answer_type.label }}<span class="red">*</span></div>
-									<div class="left w250 marb5">{{ q.answer_type }}</div>
-									<div class="marl100 left f11 w110 marb5">{{ q.type.label }}<span class="red">*</span></div>
-									<div class="left w250 marb5">{{ q.type }}</div>
+									<div class="marl100 left f11 w110 marb5">{{ form.answer_type.label }}<span class="red">*</span></div>
+									<div class="left w250 marb5">{{ form.answer_type }}</div>
+									<div class="marl100 left f11 w110 marb5">{{ form.type.label }}<span class="red">*</span></div>
+									<div class="left w250 marb5">{{ form.type }}</div>
 								</div><!-- /div right part -->
 								<div class="clear"></div>
 							</div><!-- /div main -->
 						</div><!-- /div divider top -->
 						<div class="clear">&nbsp;</div>
-                        <!--************ FIELD FORM **************-->
-                        <div id="item_wrapper f11" class="marl10"><!-- div item wrapper -->
-                            <a class="toggle-down-arrow arrow-right item_link" id="field_options" title="Click here to add fields" href="#">Add Fields</a>
-                        </div><!-- /div item wrapper -->
-                        <div id="field_options_div" class="hide clear"> <!-- div option_details -->
-                            <div class="divider-top"><!-- div divider top -->
-                                <div class="mart5"> <!-- option form div-->
-                                    {{field_formset.management_form}}
-                                    {% for i in field_formset.forms %}
-                                        <div class="formgroup">
-                                            {% if i %}
-                                                <div class="padb5 padt5 marb5 left seller-rate-chart" style="background-color:#fefefe; width:100%"><!-- div list part -->
-                                                    <div class="left flgray f11 w110 marl10 ">{{ i.field_label.label }}</div>
-                                                    <div class="left w250">{{ i.field_label }}</div>
-                                                    <div class="left flgray f11 w110 marl10 ca">{{ i.field_type.label }}</div>
-                                                    <div class="left w250 seller-dropdown">{{ i.field_type }}</div>
-                                                </div><!-- /div list part -->
-                                                <div class="clear"></div>
-                                            {% endif %}
-                                        </div>
-                                    {% endfor %}
-                                </div><!-- /div option form -->
-                                <div class="left">
-                                    <input title='Add new field' type='submit' name='addfield' id='addfield' value='+ Add Field' class="btn_c btn_c_s" />
-                                </div>
-                                <div class="clear or_hr marb10">&nbsp;</div>
-
-                            </div><!-- /div divider top -->
-                        </div><!-- /div option_details -->
-                        </div>
-                        {%endfor%}
-                        <!-- ********** END FIELD OPTIONS FORM **************** -->
-				    </div><!-- /div web_module_details -->
+					</div><!-- /div web_module_details -->
+				</div><!-- /div gray background -->
                 <div class="clear">&nbsp;</div>
-				<div class="clear border-dotted-gray"></div>
+
+				<!--************ FIELD FORM **************-->
 				<div id="item_wrapper f11" class="marl10"><!-- div item wrapper -->
-                	<a class="toggle-down-arrow arrow-right item_link" id="add_dependent_question" title="Click here to add options" href="#">Add Options</a>
+                	<a class="toggle-down-arrow arrow-right item_link" id="field_options" title="Click here to add fields" href="#">Add Fields</a>
                 </div><!-- /div item wrapper -->
+				<div id="field_options_div" class="hide clear"> <!-- div option_details -->
+					<div class="divider-top"><!-- div divider top -->
+						<div class="mart5"> <!-- option form div-->
+							{{field_formset.management_form}}
+							{% for i in field_formset.forms %}
+								<div class="formgroup">
+									{% if i %}
+										<div class="padb5 padt5 marb5 left seller-rate-chart" style="background-color:#fefefe; width:100%"><!-- div list part -->
+											<div class="left flgray f11 w110 marl10 ">{{ i.field_label.label }}</div>
+											<div class="left w250">{{ i.field_label }}</div>
+											<div class="left flgray f11 w110 marl10 ca">{{ i.field_type.label }}</div>
+                                            <div class="left w250 seller-dropdown">{{ i.field_type }}</div>
+										</div><!-- /div list part -->
+										<div class="clear"></div>
+									{% endif %}
+								</div>
+							{% endfor %}
+						</div><!-- /div option form -->
+						<div class="left">
+							<input title='Add new field' type='submit' name='addfield' id='addfield' value='+ Add Field' class="btn_c btn_c_s" />
+						</div>
+						<div class="clear or_hr marb10">&nbsp;</div>
 
-                <div class="clear">&nbsp;</div>
-                <div class="right">
-                    <INPUT TYPE="submit" id="save" VALUE="Save" class="btn_c btn_c_s btn_orange" name="save" />
-                </div>
+					</div><!-- /div divider top -->
+				</div><!-- /div option_details -->
+				<!-- ********** FIELD OPTIONS FORM **************** -->
+				<div class="clear border-dotted-gray"></div>
+				<!--************ OPTIONS FORM **************-->
+				<div id="item_wrapper f11" class="marl10"><!-- div item wrapper -->
+                	<a class="toggle-down-arrow arrow-right item_link" id="add_options" title="Click here to add options" href="#">Add Options</a>
+                </div><!-- /div item wrapper -->
+				<div id="add_options_div" class="hide clear"> <!-- div option_details -->
+					<div class="divider-top"><!-- div divider top -->
+						<div> <!-- option form div-->
+							{{option_formset.management_form}}
+							{% for i in option_formset.forms %}
+								<div class="formgroup">
+									{% if i %}
+										<div class="padb5 padt5 marb5 left seller-rate-chart" style="background-color:#fefefe; width:100%"><!-- div list part -->
+											<div class="left flgray f11 w110 marl10 ">{{ i.option_value.label }}</div>
+											<div class="left w250">{{ i.option_value }}</div>
+                                            <div class="left flgray f11 w110 marl10 ca">{{ i.dependent_question.label }}</div>
+                                            <div class="left w250 seller-dropdown">{{ i.dependent_question }}
+                                            <a href="/question/add/{{random_count}}{{forloop.counter0}}" class="add-another" id="add_id_question{{random_count}}{{forloop.counter0}}" onclick="return showAddAnotherPopup(this);">
+                                                <img src="/media/images/icon_addlink.gif" width="10" height="10" alt="Add Another"/>
+                                            </a>
+                                            </div>
+                                            <div class="add_dependent_question"></div>
+										</div><!-- /div list part -->
+										<div class="clear"></div>
+									{% endif %}
+								</div>
+							{% endfor %}
+						</div><!-- /div option form -->
+						<div class="left">
+                            
+							<input title='Add new option' type='submit' name='addoption' id='addoption' value='+ Add Option' class="btn_c btn_c_s" />
+						</div>
+						<div class="clear or_hr marb10">&nbsp;</div>
+					</div><!-- /div divider top -->
+				</div><!-- /div option_details -->
+				<!-- ********** END OPTIONS FORM **************** -->
+
+			<div class="clear">&nbsp;</div>
+			<div class="right">
+                <input type="hidden" id="is_popup" name="is_popup" value={{is_popup}} />
+				<INPUT TYPE="submit" id="save" VALUE="Save" class="btn_c btn_c_s btn_orange" name="save" />
+			</div>
 			</div><!-- /div web_container -->
 		</form>
 	</div>
@@ -150,64 +182,28 @@
 {% endblock %}
 {% block script_footer %}
 {{block.super}}
+
 <script type="text/javascript">
- $('#id_lists-starts_on').datepicker({dateFormat:'yy-mm-dd'});
- $('#id_lists-ends_on').datepicker({dateFormat:'yy-mm-dd', 
- 	minDate:$('#id_lists-starts_on').val(),
-	beforeShow: function(){
-		var newDate = $('#id_lists-starts_on').datepicker('getDate');
-		if (newDate){
-			$('#id_lists-ends_on').datepicker('option', 'minDate', newDate);
-		}
-	}
- });
- $('#id_lists-type').click(function(){
-	 var e = document.getElementById("id_lists-type");
-	 var str = e.options[e.selectedIndex].value;
-	 if (str=="todays_deals")
-	 {
-		$('.new_arrivals').show();
-		$('.hero_deal').show();
-		$('.todays_deals').hide();
-	}
-	else if (str=="new_arrivals")
-	{
-		$('.hero_deal').show();
-		$('.todays_deals').show();
-		$('.new_arrivals').hide();
-	}
-	else if (str=="hero_deal")
-	{
-		$('.todays_deals').show();
-		$('.new_arrivals').show();
-		$('.hero_deal').hide();
-	}
-	else
-	{
-		$('.todays_deals').show();
-		$('.new_arrivals').show();
-		$('.hero_deal').show();
-	}
- });
-
-$('.item_link').toggle(
-    function(){	
-		var e = this.id;
-		var k = e+"_div";
-        //$('#item_form').show();
-
-		$('#'+k).slideDown();
-		$(this).removeClass('toggle-down-arrow');
-		$(this).addClass('toggle-up-arrow');
-    },
-    function(){
-		var e = this.id;
-		$('#'+e+'_div').slideUp();
-//		$('#'+e+'_item').removeClass('hide');
-        //$('#item_form').hide();
-		$(this).removeClass('toggle-up-arrow');
-		$(this).addClass('toggle-down-arrow');
-    }
-);
+$(document).ready(function(){
+    $('.item_link').toggle(
+        function(){	
+            var e = this.id;
+            var k = e+"_div";
+            //$('#item_form').show();
+            $('#'+k).slideDown();
+            $(this).removeClass('toggle-down-arrow');
+            $(this).addClass('toggle-up-arrow');
+        },
+        function(){
+            var e = this.id;
+            $('#'+e+'_div').slideUp();
+    //		$('#'+e+'_item').removeclass('hide');
+            //$('#item_form').hide();
+            $(this).removeClass('toggle-up-arrow');
+            $(this).addClass('toggle-down-arrow');
+        }
+    );
+});
 </script>
+<script type="text/javascript" src="/adminmedia/js/admin/RelatedObjectLookups.js"></script>
 {% endblock %}
