--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{{MEDIA_URL}}css/bp/screen.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}css/bp/print.css" type="text/css" media="print" />
         <link rel="stylesheet" href="{{MEDIA_URL}}css/pop_up.css" type="text/css" />
-        <link rel="stylesheet" href="{{MEDIA_URL}}css/ch.v16.css" type="text/css" />
+<!--        <link rel="stylesheet" href="{{MEDIA_URL}}css/ch.v16.css" type="text/css" />-->
         <link rel="stylesheet" href="{{MEDIA_URL}}js/jquery-suggestion/css/styles.css" type="text/css" /> 
 {% endblock %}
 		
@@ -32,7 +32,7 @@
 <!--[if IE 7]><link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/ie7.css" /><![endif]-->
 <!--[if IE 8]><link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/ie8.css" /><![endif]-->
 
-<link rel="stylesheet" href="{{MEDIA_URL}}css/base.css" type="text/css" media="screen, projection" />
+<!--<link rel="stylesheet" href="{{MEDIA_URL}}css/base.css" type="text/css" media="screen, projection" />-->
 <link rel="stylesheet" href="{{MEDIA_URL}}css/common.css" type="text/css" media="screen, projection" />
 <!--
 <link rel="stylesheet" href="{{MEDIA_URL}}css/menu.css" type="text/css" media="screen, projection" />
