Fixed hide unhide of rows and columns.

--- a/templates/tinla/question/add_question.html
+++ b/templates/tinla/question/add_question.html
@@ -108,10 +108,10 @@
 									<div class="left w250 marb5">{{ form.answer_type }}</div>
 									<div class="marl100 left f11 w110 marb5">{{ form.type.label }}</div>
 									<div class="left w250 marb5">{{ form.type }}</div>
-                                    <div class="marl100 left f11 w110 marb5 text-area">{{ form.rows.label }}</div>
-									<div class="left w250 marb5 text-area">{{ form.rows }}</div>
-                                    <div class="marl100 left f11 w110 marb5 text-area">{{ form.columns.label }}</div>
-									<div class="left w250 marb5 text-area">{{ form.columns }}</div>
+                                    <div class="marl100 left f11 w110 marb5 text-area hide">{{ form.rows.label }}</div>
+									<div class="left w250 marb5 text-area hide">{{ form.rows }}</div>
+                                    <div class="marl100 left f11 w110 marb5 text-area hide">{{ form.columns.label }}</div>
+									<div class="left w250 marb5 text-area hide">{{ form.columns }}</div>
 								</div><!-- /div right part -->
 								<div class="clear"></div>
 							</div><!-- /div main -->
