--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -24,7 +24,7 @@
 {% block core_css %}
 
 <!--<link rel="stylesheet" href="{{MEDIA_URL}}css/ch.v19.css" type="text/css" />-->
-
+<link rel="stylesheet" href="{{MEDIA_URL}}css/question.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}js/jsonSuggest/jsonSuggest.css" type="text/css" />
 <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/rupee/font.css">
 
