--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -57,7 +57,7 @@
 <link rel="stylesheet" href="{{MEDIA_URL}}css/forgot_password.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}css/jq/jquery-ui-1.8.2.custom.css" type="text/css" media="screen, projection" />
 -->
-
+<link rel="stylesheet" href="{{MEDIA_URL}}css/jq/jquery-ui-1.8.2.custom.css" type="text/css" media="screen, projection" />
 <link rel="shortcut icon" href="{%render_favicon request%}"/>
 {% endblock %}
 
