changes related to products

--- a/templates/tinla/question/question_delete_confirm.html
+++ b/templates/tinla/question/question_delete_confirm.html
@@ -18,10 +18,12 @@
 				<td>{{question.question}}</td>
             </tr>
             {% for d in dependent_questions %}
+            {% if d.question %}
             <tr>
                 <td>Question:</td>
                 <td>{{d.question}}</td>
             </tr>
+            {% endif %}
 			{% endfor %}
 		</table>
         </div>
