--- a/templates/tinla/question/question.html
+++ b/templates/tinla/question/question.html
@@ -35,8 +35,8 @@
 				<h1>{{ q.question }}</h1>
     		</div>
 			<div class="right content_head"> 
-				<div class="left"><a href="/question/preview/{{q.id}}/" class="uiButton fblack" style="padding: 3px 8px !important;">Preview</a>
-				</div>
+				<div class="left"><a href="/question/preview/{{q.id}}/" class="uiButton fblack" style="padding: 3px 8px !important;">Preview</a>&nbsp;&nbsp;</div>
+                <div class="left"><a href="/question/edit/{{q.id}}/" class="uiButton fblack" style="padding: 3px 8px !important;">Edit</a></div>
 			</div>
 		</div>
     	<div class="clear bordergray"></div>
