upload template and template details done.

--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -89,12 +89,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="hupt" href="YOUR-URL">Upload Document</a>
+                        <a class="hupt" href="YOUR_URL">Upload Document</a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a class="hupt" href="YOUR-URL">Build Document</a>
+                        <a class="hupt" href="/build-document/upload-template/">Build Document</a>
                     </td>
                 </tr>
                 <tr>
