Included questions section in base. Fixed edit issue.

--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -84,12 +84,12 @@
             <table style="width:100%">
                 <tr>
                     <td>
-                        <a class="hupt" href="/categories/view/">Categories</a>
+                        <a class="hupt" href="/question/view/">Questions</a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a class="hupt" href="YOUR_URL">Upload Document</a>
+                        <a class="hupt" href="/categories/view/">Categories</a>
                     </td>
                 </tr>
                 <tr>
